<?xml version="1.0" encoding="UTF-8"?>
<!-- Supported Paper range: 1.21.9-1.21.11 -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.darkniightz</groupId>
  <artifactId>jebaitedcore</artifactId>
  <version>1.0</version>

  <properties>
    <java.version>21</java.version>
    <paper.api.version>1.21.11-R0.1-SNAPSHOT</paper.api.version>
    <maven.compiler.release>${java.version}</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <repositories>
    <repository>
      <id>papermc-repo</id>
      <url>https://repo.papermc.io/repository/maven-public/</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>io.papermc.paper</groupId>
      <artifactId>paper-api</artifactId>
      <version>${paper.api.version}</version>
      <scope>provided</scope>
    </dependency>
    <!-- Kyori Adventure serializers used directly in ChatListener -->
    <dependency>
      <groupId>net.kyori</groupId>
      <artifactId>adventure-text-serializer-legacy</artifactId>
      <version>4.17.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>net.kyori</groupId>
      <artifactId>adventure-text-serializer-plain</artifactId>
      <version>4.17.0</version>
      <scope>provided</scope>
    </dependency>
    <!-- PostgreSQL Driver -->
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>42.7.3</version>
      <scope>runtime</scope>
    </dependency>
    <!-- HikariCP Connection Pooling -->
    <dependency>
      <groupId>com.zaxxer</groupId>
      <artifactId>HikariCP</artifactId>
      <version>5.1.0</version>
      <scope>compile</scope>
    </dependency>
  </dependencies>

  <build>
    <finalName>JebaitedCore</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <showWarnings>false</showWarnings>
          <compilerArgs>
            <arg>-Xlint:none</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.3.0</version>
        <configuration>
          <archive>
            <manifest>
              <mainClass>com.darkniightz.main.JebaitedCore</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>